# barnes-hut

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  performanceAnalysis.ipynb  plot.py  requirements.txt
.github/workflows/: c-cpp.yml
SIMD_tests/: Bruteforce.cpp  Bruteforce.opt.yaml  Bruteforce.optrpt  BruteforceBlocked.cpp  Forces.cpp  Forces.h  Forces.optrpt  Makefile
images/: multicoretest.py  performanceAnalysis.ipynb  results.npy
include/: Barneshut.h  Bruteforce.h  Cuboid.h  Distributions.h  Forces.h  Order.h  Particle.h  Simulation.h
minimalOf/: config.make
minimalOf/src/: ofApp.cpp  ofApp.h
minimalOf/src/OctTree/: Forces.cpp  Particle.h  Tree.cpp
minimalOf/src/Simulation/: Distributions.cpp  Order.h
simulation/: CMakeLists.txt  main.cpp
src/: Barneshut.cpp  Bruteforce.cpp  CMakeLists.txt  Cuboid.cpp  Distributions.cpp  Forces.cpp  Order.cpp  Simulation.cpp  main.cpp
src/OctTree/: CMakeLists.txt
src/OctTree/include/: CMakeLists.txt  Cuboid.h  Forces.h  Particle.h  Tree.h
src/OctTree/src/: Cuboid.cpp  Forces.cpp  Tree.cpp
src/QuadTree/: CMakeLists.txt  Cuboid.cpp  Cuboid.h  Particle.cpp  Particle.h  QuadTree.h  Rectangle.h  Tree.cpp  Tree.h  main.cpp
src/QuadTree/include/: Cuboid.h  Forces.h  Order.h  Particle.h  QuadTree.h  Tree.h  Tree2.h
src/QuadTree/src/: Cuboid.cpp  Forces.cpp  Order.cpp  Particle.cpp  Tree.cpp  Tree2.cpp
src/Simulation/: CMakeLists.txt  Distributions.cpp  Distributions.h  Simulation.cpp  Simulation.h  distributions.h  simulation.h
src/Simulation/include/: Barneshut.h  Bruteforce.h  Distributions.h  Order.h  OutputWriter.h  Progress.h  Simulation.h
src/Simulation/src/: Barneshut.cpp  Bruteforce.cpp  Distributions.cpp  Order.cpp  OutputWriter.cpp  Simulation.cpp
tests/: CMakeLists.txt  test.cpp
visualizer/: Makefile  ReadMe.md  config.make
visualizer/src/: main.cpp  ofApp.cpp  ofApp.h
visualizer/src/OctTree/: Cuboid.h  Forces.cpp  Particle.h  Tree.h
visualizer/src/Simulation/: Bruteforce.cpp  Distributions.cpp  Simulation.cpp  Simulation.h
